--- a/frontend/financial-products/src/index.html
+++ b/frontend/financial-products/src/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>FinancialProducts</title>
+  <title>Financial Products App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Aplicación web para la gestión de productos financieros: listado, creación, edición, y eliminación de productos con validaciones avanzadas y experiencia moderna.">
 </head>
 <body>
   <app-root></app-root>
